Переписал обработку ошибок и документацию, добавил тестовых данных
