# src/main/java/com/example/bankcards/controller/api/AdminApi.java
@@ -8,6 +8,7 @@ import com.example.bankcards.util.validation.ValidDate;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
+import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.Min;
@@ -27,6 +28,7 @@ import java.util.UUID;
 @Validated
 @Tag(name = "AdminControllerApi",
         description = "API для работы администратора")
+@SecurityRequirement(name = "bearerAuth")
 public interface AdminApi {
 
     @PostMapping("/card")
